# psi-meeting-scheduler

./: .gitignore  README.md  demo.html  demo_partb.html  pyproject.toml
fixtures/: across_timezones.json  multi_person_sacrifice.json  no_common_slot.json  reschedule_easy.json  reschedule_impossible.json  reschedule_medium.json  three_people.json
gated_scheduler/: __init__.py  cli.py  freebusy.py  grid.py  matching.py  scheduler.py
gated_scheduler/psi/: __init__.py  channel.py  primitives.py  protocol.py
gated_scheduler/sources/: __init__.py  base.py  fixtures.py  google.py
gated_scheduler/viz/: __init__.py  html.py
tests/: test_channel.py  test_cli.py  test_freebusy.py  test_grid.py  test_html.py  test_matching.py  test_primitives.py  test_protocol.py  test_scheduler.py  test_sources.py
