[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gated-scheduler"
version = "0.1.0"
description = "Gated-access meeting scheduling via multi-party Private Set Intersection (PSI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["psi", "private-set-intersection", "scheduling", "cryptography", "privacy"]
dependencies = [
    "pynacl>=1.5.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
schedule = "gated_scheduler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gated_scheduler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Embedded HTML/Jinja template legitimately has long lines.
"gated_scheduler/viz/html.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# nacl ships no stubs; google libs are an optional extra, lazy-imported in the live adapter only.
module = ["nacl.*", "googleapiclient.*", "google.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true
